--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>site-vizitka</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>
-        test
-    </h1>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <a class="logo" href="#">C</a>
+                <ul class="navigation-holder">
+                    <li class="nav-links">
+                        <a href="#">Explore</a>
+                    </li>
+                    <li class="nav-links">
+                        <a href="#">MENTORS</a>
+                    </li>
+                    <li class="nav-links">
+                        <a href="#">BLOG</a>
+                    </li>
+                    <li class="nav-links">
+                        <a href="#">COMMUNITY</a>
+                    </li>
+                </ul>
+            </nav>
+            <section class="header-title">
+                <span class="header-subtitle-text">FEATURED CLASS</span>
+                <h1 class="header-title-text">
+                    The role of User Interface Designer
+                </h1>
+                <a href="#" class="join">
+                    <img src="/img/icons/arrow.svg" alt="arrow">
+                    <span class="join-text">Join <br>
+                        The Class</span>
+                </a>
+            </section>
+        </div>
+    </header>
 </body>
+
 </html>
